# book4u

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  start.py
.dvc/: config  config.local.example
.github/workflows/: ci.yaml
app/: main.py  test_main.py
data/interim/: .gitignore  GoodReads_books_clean.csv.dvc
data/raw/: .gitignore  GoodReads_100k_books.csv.dvc
docker/: .env.example  docker-compose.yml
docker/mlflow_image/: Dockerfile
docker/nginx_image/: Dockerfile  mlflow.conf
docs/: Makefile  architecture.drawio  conf.py  index.rst  make.bat
mlruns/0/: meta.yaml
notebooks/: Book4You.ipynb  clean_data_analysis.ipynb  test.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/892724215532756192/: meta.yaml
notebooks/mlruns/892724215532756192/0ce0d3575c16470c80c1e2470f02b4e5/: meta.yaml
notebooks/mlruns/892724215532756192/0ce0d3575c16470c80c1e2470f02b4e5/artifacts/: cleansing_results.txt
notebooks/mlruns/892724215532756192/0ce0d3575c16470c80c1e2470f02b4e5/tags/: mlflow.runName
notebooks/mlruns/892724215532756192/8a768c0fb14d45c9b0184ff202480bd3/: meta.yaml
notebooks/mlruns/892724215532756192/8a768c0fb14d45c9b0184ff202480bd3/artifacts/: cleansing_results.txt
notebooks/mlruns/892724215532756192/8a768c0fb14d45c9b0184ff202480bd3/tags/: mlflow.runName  mlflow.source.name
src/: __init__.py
src/data/: data_cleanser.py  data_loader.py  make_dataset.py  make_mapping.py  make_mappings.py  parser.py
src/features/: text_features_generator.py
src/models/: predict_model.py  text_vectorizer.py  train_model.py
tests/: test_model.py
