[tool.poetry]
name = "book4u"
version = "0.1.0"
description = "Web-based book recommendation system"
authors = ["Andrey Korotkiy <Andreikorotkiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
fastapi = {extras = ["all"], version = "^0.95.0"}
cookiecutter = "^2.1.1"
pytest = "^7.2.2"
pandas = "^2.0.1"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 89
disable = """
    too-many-return-statements,
    global-statement,
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    missing-module-docstring,
    invalid-name,
    missing-function-docstring,
    redefined-outer-name,
    import-error,
    missing-class-docstring,
    too-few-public-methods,
    attribute-defined-outside-init,
    too-many-locals,
    too-many-arguments,
    too-many-instance-attributes,
    unused-argument,
    no-member,
    arguments-differ,
    super-init-not-called
"""